# rpi-audio-spectrum-visualizer

./: README.md  adafruit_ws2801.py  app.py  controller.py  main.py  pyproject.toml  run-server.sh  states.py
react-web-app/: package-lock.json  package.json
react-web-app/src/: App.css  App.js
