[tool.poetry]
name = "rpi-audio-spectrum-visualizer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
wheel = "^0.35.1"
prometheus-flask-exporter = "^0.17.0"
flask-cors = "^3.0.9"
adafruit-circuitpython-ws2801 = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
